finish thinking after Build

--- a/docker/gov-sample-app/Dockerfile
+++ b/docker/gov-sample-app/Dockerfile
@@ -4,5 +4,5 @@ RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
 RUN apk add --no-cache python g++ make
 WORKDIR /app
 COPY . .
-RUN yarn install --production
-CMD ["node", "src/index.js"]
+RUN ["yarn", "install", "--production"]
+CMD node src/index.js
