--- a/k8s/chronograf/influxdb.yaml
+++ b/k8s/chronograf/influxdb.yaml
@@ -19,6 +19,9 @@ spec:
       - name: influxdb
         imagePullPolicy: IfNotPresent
         image: influxdb:1.8
+        env:
+        - name: INFLUXDB_HTTP_AUTH_ENABLED
+          value: "true"
         resources:
           limits:
             cpu: 100m
